--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "postinstall": "yarn codegen",
+    "codegen": "graphql-codegen --config codegen.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "3.8.8",
+    "@apollo/experimental-nextjs-app-support": "^0.5.2",
     "@hookform/resolvers": "^3.3.2",
     "@nextui-org/react": "^2.2.9",
-    "@tanstack/react-query": "^5.14.1",
-    "date-fns": "^2.30.0",
+    "@tanstack/react-query": "^5.14.2",
+    "date-fns": "^3.0.5",
     "framer-motion": "^10.16.16",
+    "graphql": "^16.8.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-auth-steam": "^0.1.5",
@@ -25,6 +30,13 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/near-operation-file-preset": "^3.0.0",
+    "@graphql-codegen/typed-document-node": "^5.0.1",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@graphql-codegen/typescript-resolvers": "^4.0.1",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@tanstack/eslint-plugin-query": "^5.12.1",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
@@ -39,8 +51,8 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "postcss": "^8.4.32",
-    "tailwind-merge": "^2.1.0",
-    "tailwindcss": "^3.3.6",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   }
 }
