--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall": "yarn codegen",
     "codegen": "graphql-codegen --config codegen.ts",
     "dev": "next dev",
     "build": "next build",
@@ -13,21 +12,22 @@
   "dependencies": {
     "@apollo/client": "3.8.8",
     "@apollo/experimental-nextjs-app-support": "^0.5.2",
-    "@hookform/resolvers": "^3.3.2",
     "@nextui-org/react": "^2.2.9",
-    "@tanstack/react-query": "^5.14.6",
+    "@tanstack/react-table": "^8.11.2",
+    "@uidotdev/usehooks": "^2.4.1",
+    "class-variance-authority": "^0.7.0",
     "date-fns": "^3.0.6",
     "framer-motion": "^10.16.16",
     "graphql": "^16.8.1",
+    "lucide-react": "^0.302.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-auth-steam": "^0.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "zod": "^3.22.4"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
@@ -37,7 +37,6 @@
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@tanstack/eslint-plugin-query": "^5.14.6",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
