Add codegen.ts and NextTopLoader component

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movies-app",
+  "name": "dota2_stats",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,14 +15,14 @@
     "@nextui-org/react": "^2.2.9",
     "@tanstack/react-table": "^8.11.2",
     "@uidotdev/usehooks": "^2.4.1",
-    "class-variance-authority": "^0.7.0",
     "date-fns": "^3.0.6",
     "framer-motion": "^10.16.16",
     "graphql": "^16.8.1",
-    "lucide-react": "^0.302.0",
+    "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-auth-steam": "^0.1.5",
+    "nextjs-toploader": "^1.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -38,7 +38,7 @@
     "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
+    "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
     "clsx": "^2.0.0",
