--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "recharts": "^2.10.3",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
