--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "date-fns": "^3.2.0",
     "framer-motion": "^10.18.0",
     "graphql": "^16.8.1",
-    "lucide-react": "^0.309.0",
+    "lucide-react": "^0.311.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-auth-steam": "^0.1.5",
@@ -38,7 +38,7 @@
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@types/node": "^20.11.2",
+    "@types/node": "^20.11.4",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
@@ -52,6 +52,7 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "postcss": "^8.4.33",
     "tailwind-merge": "^2.2.0",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
