--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@apollo/client": "3.8.10",
     "@apollo/experimental-nextjs-app-support": "^0.6.0",
     "@nextui-org/react": "^2.2.9",
-    "@tanstack/react-table": "^8.11.6",
+    "@tanstack/react-table": "^8.11.7",
     "@uidotdev/usehooks": "^2.4.1",
-    "date-fns": "^3.2.0",
+    "date-fns": "^3.3.0",
     "framer-motion": "^10.18.0",
     "graphql": "^16.8.1",
     "lucide-react": "^0.312.0",
@@ -28,7 +28,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "recharts": "^2.10.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
