--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "@nextui-org/react": "^2.2.9",
     "@tanstack/react-table": "^8.11.7",
     "@uidotdev/usehooks": "^2.4.1",
-    "date-fns": "^3.3.0",
+    "date-fns": "^3.3.1",
     "framer-motion": "^10.18.0",
     "graphql": "^16.8.1",
-    "lucide-react": "^0.312.0",
+    "lucide-react": "^0.314.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "next-auth-steam": "^0.2.0",
     "nextjs-toploader": "^1.6.4",
     "react": "^18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
@@ -52,7 +53,7 @@
     "eslint-plugin-tailwindcss": "^3.14.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "postcss": "^8.4.33",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.2.1",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
