--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "3.8.10",
     "@apollo/experimental-nextjs-app-support": "^0.6.0",
     "@nextui-org/react": "^2.2.9",
+    "@nivo/calendar": "^0.84.0",
     "@tanstack/react-table": "^8.11.7",
     "@uidotdev/usehooks": "^2.4.1",
     "date-fns": "^3.3.1",
