--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nivo/calendar": "^0.84.0",
     "@tanstack/react-table": "^8.11.7",
     "@uidotdev/usehooks": "^2.4.1",
+    "@uiw/react-heat-map": "^2.2.1",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.3",
     "graphql": "^16.8.1",
@@ -25,6 +26,7 @@
     "next-auth-steam": "^0.2.0",
     "nextjs-toploader": "^1.6.4",
     "react": "^18.2.0",
+    "react-calendar-heatmap": "^1.9.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -43,6 +45,7 @@
     "@graphql-typed-document-node/core": "^3.2.0",
     "@types/node": "^20.11.6",
     "@types/react": "^18.2.48",
+    "@types/react-calendar-heatmap": "^1.6.7",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
     "clsx": "^2.1.0",
