--- a/package.json
+++ b/package.json
@@ -13,20 +13,18 @@
     "@apollo/client": "3.8.10",
     "@apollo/experimental-nextjs-app-support": "^0.6.0",
     "@nextui-org/react": "^2.2.9",
-    "@nivo/calendar": "^0.84.0",
     "@tanstack/react-table": "^8.11.7",
     "@uidotdev/usehooks": "^2.4.1",
-    "@uiw/react-heat-map": "^2.2.1",
+    "cal-heatmap": "^4.2.4",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.3",
     "graphql": "^16.8.1",
-    "lucide-react": "^0.314.0",
+    "lucide-react": "^0.316.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "next-auth-steam": "^0.2.0",
     "nextjs-toploader": "^1.6.4",
     "react": "^18.2.0",
-    "react-calendar-heatmap": "^1.9.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -43,9 +41,8 @@
     "@graphql-codegen/typescript-operations": "^4.0.1",
     "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@types/node": "^20.11.6",
+    "@types/node": "^20.11.7",
     "@types/react": "^18.2.48",
-    "@types/react-calendar-heatmap": "^1.6.7",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
     "clsx": "^2.1.0",
@@ -54,7 +51,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-tailwindcss": "^3.14.0",
+    "eslint-plugin-tailwindcss": "^3.14.1",
     "eslint-plugin-unused-imports": "^3.0.0",
     "postcss": "^8.4.33",
     "tailwind-merge": "^2.2.1",
