--- a/package.json
+++ b/package.json
@@ -10,53 +10,54 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "3.9.4",
-    "@apollo/experimental-nextjs-app-support": "^0.8.0",
-    "@nextui-org/react": "^2.2.9",
-    "@tanstack/react-table": "^8.11.8",
+    "@apollo/client": "3.9.10",
+    "@apollo/experimental-nextjs-app-support": "0.8.0",
+    "@nextui-org/react": "^2.2.10",
+    "@tanstack/react-table": "^8.15.3",
     "@uidotdev/usehooks": "^2.4.1",
     "cal-heatmap": "^4.2.4",
     "dayjs": "^1.11.10",
-    "framer-motion": "^11.0.4",
+    "framer-motion": "^11.0.24",
     "graphql": "^16.8.1",
-    "lucide-react": "^0.330.0",
-    "next": "14.1.0",
-    "next-auth": "^4.24.5",
-    "next-auth-steam": "^0.2.0",
-    "nextjs-toploader": "^1.6.6",
+    "lucide-react": "^0.364.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "next": "14.1.4",
+    "next-auth": "^4.24.7",
+    "next-auth-steam": "^0.3.0",
+    "nextjs-toploader": "^1.6.11",
     "react": "^18.2.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "recharts": "^2.12.0",
+    "recharts": "^2.12.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/near-operation-file-preset": "^3.0.0",
-    "@graphql-codegen/typed-document-node": "^5.0.4",
-    "@graphql-codegen/typescript": "^4.0.4",
-    "@graphql-codegen/typescript-operations": "^4.1.2",
-    "@graphql-codegen/typescript-resolvers": "^4.0.4",
+    "@graphql-codegen/typed-document-node": "^5.0.6",
+    "@graphql-codegen/typescript": "^4.0.6",
+    "@graphql-codegen/typescript-operations": "^4.2.0",
+    "@graphql-codegen/typescript-resolvers": "^4.0.6",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@types/node": "^20.11.17",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "autoprefixer": "^10.4.17",
+    "@types/node": "^20.12.2",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.23",
+    "autoprefixer": "^10.4.19",
     "clsx": "^2.1.0",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.1.4",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
-    "eslint-plugin-tailwindcss": "^3.14.2",
+    "eslint-plugin-tailwindcss": "^3.15.1",
     "eslint-plugin-unused-imports": "^3.1.0",
-    "postcss": "^8.4.35",
-    "tailwind-merge": "^2.2.1",
+    "postcss": "^8.4.38",
+    "tailwind-merge": "^2.2.2",
     "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.3"
   }
 }
