Refactor searchParams to be a Promise in page components

--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "graphql": "^16.9.0",
     "lucide-react": "^0.453.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.2.15",
+    "next": "15.0.1",
     "next-auth": "^4.24.8",
     "next-auth-steam": "^0.3.0",
     "nextjs-toploader": "^3.7.15",
-    "react": "^18.3.1",
+    "react": "19.0.0-rc-69d4b800-20241021",
     "react-country-flag": "^3.1.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "recharts": "^2.13.0",
@@ -43,12 +43,12 @@
     "@graphql-codegen/typescript-resolvers": "^4.3.0",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@types/node": "^22.7.7",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.15",
+    "eslint-config-next": "15.0.1",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
@@ -59,5 +59,11 @@
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "npm:types-react@19.0.0-rc.1",
+      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+    }
   }
 }
