--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   },
   "dependencies": {
     "@apollo/client": "3.11.8",
-    "@apollo/experimental-nextjs-app-support": "0.11.4",
+    "@apollo/experimental-nextjs-app-support": "0.11.5",
     "@nextui-org/react": "^2.4.8",
     "@tanstack/react-table": "^8.20.5",
     "@uidotdev/usehooks": "^2.4.1",
     "cal-heatmap": "^4.2.4",
     "dayjs": "^1.11.13",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^11.11.10",
     "graphql": "^16.9.0",
     "lucide-react": "^0.453.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "15.0.1",
-    "next-auth": "^4.24.8",
+    "next-auth": "^4.24.10",
     "next-auth-steam": "^0.3.0",
     "nextjs-toploader": "^3.7.15",
     "react": "19.0.0-rc-69d4b800-20241021",
@@ -35,6 +35,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@graphql-codegen/cli": "^5.0.3",
     "@graphql-codegen/near-operation-file-preset": "^3.0.0",
     "@graphql-codegen/typed-document-node": "^5.0.10",
@@ -42,23 +43,28 @@
     "@graphql-codegen/typescript-operations": "^4.3.0",
     "@graphql-codegen/typescript-resolvers": "^4.3.0",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@types/node": "^22.7.7",
+    "@next/eslint-plugin-next": "^15.0.1",
+    "@types/node": "^22.8.1",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
-    "eslint": "^8.57.1",
+    "eslint": "^9.13.0",
     "eslint-config-next": "15.0.1",
-    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "globals": "^15.11.0",
     "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.11.0"
   },
   "pnpm": {
     "overrides": {
