--- a/package.json
+++ b/package.json
@@ -10,66 +10,67 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "3.11.8",
-    "@apollo/experimental-nextjs-app-support": "0.11.5",
-    "@nextui-org/react": "^2.4.8",
-    "@tanstack/react-table": "^8.20.5",
+    "@apollo/client": "3.13.7",
+    "@apollo/client-integration-nextjs": "^0.12.1",
+    "@apollo/experimental-nextjs-app-support": "0.12.1",
+    "@heroui/react": "^2.7.6",
+    "@tanstack/react-table": "^8.21.3",
     "@uidotdev/usehooks": "^2.4.1",
     "cal-heatmap": "^4.2.4",
     "dayjs": "^1.11.13",
-    "framer-motion": "^11.11.10",
-    "graphql": "^16.9.0",
-    "lucide-react": "^0.453.0",
+    "framer-motion": "^12.7.3",
+    "graphql": "^16.10.0",
+    "lucide-react": "^0.488.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "15.0.1",
-    "next-auth": "^4.24.10",
-    "next-auth-steam": "^0.3.0",
-    "nextjs-toploader": "^3.7.15",
-    "react": "19.0.0-rc-69d4b800-20241021",
+    "next": "15.3.0",
+    "next-auth": "^4.24.11",
+    "next-auth-steam": "^0.4.0",
+    "nextjs-toploader": "^3.8.16",
+    "react": "19.1.0",
     "react-country-flag": "^3.1.0",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0",
-    "recharts": "^2.13.0",
+    "react-dom": "19.1.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "recharts": "^2.15.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "@graphql-codegen/cli": "^5.0.3",
+    "@eslint/js": "^9.24.0",
+    "@graphql-codegen/cli": "^5.0.5",
     "@graphql-codegen/near-operation-file-preset": "^3.0.0",
-    "@graphql-codegen/typed-document-node": "^5.0.10",
-    "@graphql-codegen/typescript": "^4.1.0",
-    "@graphql-codegen/typescript-operations": "^4.3.0",
-    "@graphql-codegen/typescript-resolvers": "^4.3.0",
+    "@graphql-codegen/typed-document-node": "^5.1.1",
+    "@graphql-codegen/typescript": "^4.1.6",
+    "@graphql-codegen/typescript-operations": "^4.6.0",
+    "@graphql-codegen/typescript-resolvers": "^4.5.0",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@next/eslint-plugin-next": "^15.0.1",
-    "@types/node": "^22.8.1",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "autoprefixer": "^10.4.20",
+    "@next/eslint-plugin-next": "15.3.0",
+    "@types/node": "^22.14.1",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
+    "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
-    "eslint": "^9.13.0",
-    "eslint-config-next": "15.0.1",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint": "^9.24.0",
+    "eslint-config-next": "15.3.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-tailwindcss": "^3.17.5",
+    "eslint-plugin-tailwindcss": "^3.18.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "globals": "^15.11.0",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwind-merge": "^2.5.4",
-    "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.11.0"
+    "globals": "^16.0.0",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwind-merge": "^3.2.0",
+    "tailwind-scrollbar": "^4.0.2",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.30.1"
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "npm:types-react@19.0.0-rc.1",
-      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+      "@types/react": "19.1.2",
+      "@types/react-dom": "19.1.2"
     }
   }
 }
